--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -54,7 +54,9 @@
             android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="즐겨찾기"
+            android:background="@drawable/searchbookmark"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:id="@+id/comBookmark"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
