--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -2,6 +2,30 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.chocoroll.ourcompay.Mine.MyInfoFragment"
      android:background="#ffffff">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/main_color">
+
+        <FrameLayout
+            android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+            <com.chocoroll.ourcompay.Model.EBTextView
+                android:id="@+id/title_bar_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="20dp"
+                android:textColor="#ffffff"
+                android:typeface="serif"
+                android:text=" > 비밀번호 수정 "/>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -25,6 +49,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="비밀번호"
+            android:textColor="@color/text"
             android:layout_weight="1"
             />
 
@@ -47,6 +72,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="비밀번호확인"
+            android:textColor="@color/text"
             android:layout_weight="1"
             />
 
@@ -66,6 +92,7 @@
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_width="0dp"
+                android:textColor="@color/text"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_weight="1"
@@ -87,6 +114,9 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:text="비밀번호 수정"
+            android:background="@drawable/shape"
+            android:textColor="@color/textBold"
+            android:gravity="center"
             android:id="@+id/change_pw"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"/>
