--- a/app/src/main/res/layout/slide_menu_user.xml
+++ b/app/src/main/res/layout/slide_menu_user.xml
@@ -61,7 +61,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/left_menu" />
+                            android:src="@drawable/logout" />
 
 
                         <com.chocoroll.ourcompay.Model.MTextView
@@ -93,7 +93,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/left_menu" />
+            android:src="@drawable/reservtion" />
 
 
         <com.chocoroll.ourcompay.Model.MTextView
@@ -124,7 +124,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/left_menu" />
+            android:src="@drawable/report" />
 
 
         <com.chocoroll.ourcompay.Model.MTextView
@@ -156,7 +156,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/left_menu" />
+            android:src="@drawable/bookmarklist" />
 
 
         <com.chocoroll.ourcompay.Model.MTextView
