--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -39,6 +39,7 @@
             android:layout_marginTop="70dp"
             android:paddingLeft="20dp"
             android:layout_width="0dp"
+            android:textColor="@color/text"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_weight="1"
@@ -56,11 +57,12 @@
     </LinearLayout>
 
 
-    <com.chocoroll.ourcompay.Model.BTextView
+    <com.chocoroll.ourcompay.Model.EBTextView
         android:clickable="true"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:gravity="center"
+        android:background="@drawable/shape"
         android:textColor="#FFFFFF"
         android:text="비밀번호찾기"
         android:id="@+id/findpasswd"
