--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context=".MainActivity"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,6 +44,7 @@ android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:layout_weight="1"
     android:text="E-mail"
+    android:textColor="@color/text"
     />
 
 
@@ -62,6 +64,7 @@ android:layout_height="wrap_content">
 
 <com.chocoroll.ourcompay.Model.MTextView
     android:layout_width="0dp"
+    android:textColor="@color/text"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="비밀번호"
@@ -86,6 +89,7 @@ android:layout_height="wrap_content">
 
 <com.chocoroll.ourcompay.Model.MTextView
     android:layout_width="0dp"
+    android:textColor="@color/text"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="비밀번호확인"
@@ -104,10 +108,11 @@ android:layout_height="wrap_content">
 
 
 
-<com.chocoroll.ourcompay.Model.MTextView
+<com.chocoroll.ourcompay.Model.EBTextView
     android:clickable="true"
     android:layout_width="150dp"
     android:layout_height="50dp"
+    android:background="@drawable/shape"
     android:gravity="center"
     android:text="회원가입"
     android:textColor="#FFFFFF"
