--- a/app/src/main/res/layout/fragment_report_list.xml
+++ b/app/src/main/res/layout/fragment_report_list.xml
@@ -6,6 +6,7 @@
 
 
     <ListView
+        android:divider="@color/main_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listViewReport"
