--- a/app/src/main/res/layout/fragment_company_state.xml
+++ b/app/src/main/res/layout/fragment_company_state.xml
@@ -6,6 +6,7 @@
 
 
     <ListView
+        android:divider="@color/main_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"/>
