--- a/app/src/main/res/layout/model_bookmark.xml
+++ b/app/src/main/res/layout/model_bookmark.xml
@@ -5,10 +5,12 @@
 
 
     <com.chocoroll.ourcompay.Model.MTextView
+        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/comName"
+        android:textColor="#FFF"
         android:layout_below="@+id/sCategory"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
