--- a/app/src/main/res/layout/model_company_change.xml
+++ b/app/src/main/res/layout/model_company_change.xml
@@ -3,32 +3,50 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
-    android:gravity="center_vertical"
-    android:padding="10dp">
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp"
+    android:gravity="center_vertical">
 
     <ImageView
+        android:layout_marginLeft="10dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/companyLogo" />
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.BTextView
+        android:layout_marginRight="5dp"
         android:layout_marginLeft="10dp"
-        android:textColor="#000000"
+        android:textColor="@color/textBold"
         android:textSize="20dp"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="회사이름"
         android:id="@+id/companyName" />
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.EBTextView
         android:clickable="true"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_width="wrap_content"
+        android:background="@color/main_color"
+        android:textColor="#FFF"
         android:layout_height="wrap_content"
         android:text="승인"
+        android:layout_marginRight="5dp"
         android:id="@+id/btnOK" />
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.EBTextView
         android:clickable="true"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textColor="#FFF"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:background="#E0737A"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="거절"
