--- a/app/src/main/res/layout/model_reserve_apply.xml
+++ b/app/src/main/res/layout/model_reserve_apply.xml
@@ -10,13 +10,13 @@
     <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="회사이름"
         android:id="@+id/comName" />
 
     <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="예약 날짜"
         android:id="@+id/reserveDate" />
 
     <com.chocoroll.ourcompay.Model.MTextView
