--- a/app/src/main/res/layout/model_visit_state.xml
+++ b/app/src/main/res/layout/model_visit_state.xml
@@ -12,35 +12,52 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/text"
         android:text="날짜"
 
         />
 
     <com.chocoroll.ourcompay.Model.MTextView
         android:id="@+id/purpose"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="목적"
-
+        android:textColor="@color/text"
         />
 
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:id="@+id/waitbox">
 
         <com.chocoroll.ourcompay.Model.MTextView
             android:clickable="true"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_width="wrap_content"
+            android:background="@color/main_color"
+            android:textColor="#FFF"
             android:layout_height="wrap_content"
             android:text="승인"
+            android:layout_marginRight="5dp"
             android:id="@+id/approval" />
 
         <com.chocoroll.ourcompay.Model.MTextView
             android:clickable="true"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="#FFF"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:background="#E0737A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="거절"
