--- a/app/src/main/res/layout/model_report.xml
+++ b/app/src/main/res/layout/model_report.xml
@@ -6,31 +6,21 @@
     android:padding="10dp">
 
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.BTextView
         android:layout_marginLeft="5dp"
         android:textColor="@color/textBold"
         android:textSize="17dp"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="회사이름"
         android:id="@+id/comName" />
-
-    <com.chocoroll.ourcompay.Model.MTextView
-        android:layout_marginLeft="5dp"
-        android:textColor="@color/textBold"
-        android:textSize="17dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="제목"
-        android:id="@+id/title" />
-
 
 
     <com.chocoroll.ourcompay.Model.MTextView
         android:layout_marginLeft="10dp"
         android:textColor="@color/textBold"
         android:textSize="15dp"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="2015/06/04"
         android:id="@+id/date" />
