--- a/app/src/main/res/layout/model_bookmark.xml
+++ b/app/src/main/res/layout/model_bookmark.xml
@@ -4,7 +4,7 @@
     android:padding="10dp">
 
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.EBTextView
         android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,15 +16,16 @@
         android:layout_alignParentStart="true" />
 
 
-    <com.chocoroll.ourcompay.Model.EBTextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:clickable="true"
         android:focusable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="─"
+        android:text="del"
+        android:textColor="#FFFFFF"
         android:background="@null"
         android:id="@+id/btnDelete"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
